--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="com.practical.viewmodel.SampleViewModel" />
+            type="com.practical.viewmodel.HomeViewModel" />
 
     </data>
 
